syntax = "proto3";
package xyz.hyli.connect.proto;

option java_package = "xyz.hyli.connect.proto";
option java_outer_classname = "InfoProto";
option optimize_for = LITE_RUNTIME;

import "ClientListProto.proto";

message Info {
  int32 api_version = 1;
  int32 app_version = 2;
  string app_version_name = 3;
  string platform = 4;
  string uuid = 5;
  string nickname = 6;
  ClientList client_list = 7;
}